added "enter stock ticker" text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
     <form id="input-form">
+        <h4> Enter Stock Ticker: </h4>
         <input id="ticker-input" type="text">
 
     </form>
